--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
              <div class="social-icons mt-4">
                 <a href="https://www.facebook.com/royalbinod.kapadi" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/binodbhatt9865" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com/KapadiBinod?t=JTh1l9itcqz8UWrP9Ah-Ng&s=09" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/KapadiBinod?t=JTh1l9itcqz8UWrP9Ah-Ng&s=09" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/hackerboybinu24/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/binodkapadi" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://discord.gg/hackerboy_4" target="_blank"><i class="fab fa-discord"></i></a>
@@ -386,4 +386,5 @@
 </body>
 
 </html>
+
 
