--- a/index.html
+++ b/index.html
@@ -359,20 +359,46 @@
         </div>
       </section>
 
-     <!-- footer section start -->
-     <footer id="footer">
+     <!-- footer section start -->   
+    <footer id="footer">
         <div class="container-fluid">
-            <!-- social media icons -->
-             <div class="social-icons mt-4">
-                <a href="https://www.facebook.com/royalbinod.kapadi" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/binodbhatt9865" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com/KapadiBinod?t=JTh1l9itcqz8UWrP9Ah-Ng&s=09" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/hackerboybinu24/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/binodkapadi" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://discord.gg/hackerboy_4" target="_blank"><i class="fab fa-discord"></i></a>
-                <a href="http://surl.li/juurs" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://t.me/Hackerdevil404" target="_blank"><i class="fab fa-telegram"></i></a>
-            </div>
+          <a href="https://www.facebook.com/royalbinod.kapadi "target="_blank" rel="noreferrer"  aria-label="Facebook"   className="facebook" >
+            <i className="fa-brands fa-facebook-f"></i>
+          </a>
+
+          <a href="https://www.instagram.com/binodbhatt9865"  target="_blank"  rel="noreferrer"  aria-label="Instagram"  className="instagram" >
+            <i className="fa-brands fa-instagram"></i>
+          </a>
+
+          <a  href="https://twitter.com/KapadiBinod?t=JTh1l9itcqz8UWrP9Ah-Ng&s=09"  target="_blank"  rel="noreferrer" aria-label="X (Twitter)"  className="x"  >
+            <i className="fa-brands fa-x-twitter"></i>
+          </a>
+
+          <a  href="https://www.linkedin.com/in/hackerboybinu24/"  target="_blank"  rel="noreferrer"  aria-label="LinkedIn"  className="linkedin" >
+            <i className="fa-brands fa-linkedin-in"></i>
+          </a>
+
+          <a  href="https://github.com/binodkapadi"  target="_blank"  rel="noreferrer"  aria-label="GitHub"  className="github"  >
+            <i className="fa-brands fa-github"></i>
+          </a>
+
+          <a  href="https://discord.gg/hackerboy_4"  target="_blank"  rel="noreferrer"  aria-label="Discord"  className="discord"  >
+            <i className="fa-brands fa-discord"></i>
+          </a>
+
+          <a
+            href="http://surl.li/juurs"  target="_blank"  rel="noreferrer"  aria-label="WhatsApp"  className="whatsapp"  >
+            <i className="fa-brands fa-whatsapp"></i>
+          </a>
+
+          <a  href="https://t.me/Hackerdevil404"  target="_blank"  rel="noreferrer"  aria-label="Telegram"  className="telegram"  >
+            <i className="fa-brands fa-telegram"></i>
+          </a>
+
+          <a  href="https://www.youtube.com/"  target="_blank"  rel="noreferrer"  aria-label="YouTube"  className="youtube"  >
+            <i className="fa-brands fa-youtube"></i>
+          </a>
+        </div>
           
       <div class="footer-text">
         <p>
@@ -386,5 +412,6 @@
 </body>
 
 </html>
+
 
 
