--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I have the potential to create innovative web applications, mobile apps, and cloud-based solutions that can address real-world challenges and provide value to users. Remember that creativity is not limited to design but also extends to problem-solving, efficiency, and finding novel solutions to complex problems in the domains of technology. Whether it's designing a responsive website, building a cloud-based application, optimizing code performance, or crafting feature-rich mobile apps, my diverse skill set allows you to approach each project with a fresh perspective and a flair for innovation. Keep exploring, learning, and applying your skills to various projects to nurture and grow your creative capabilities further.</p>
+                    <p>I have the potential to create innovative web applications, mobile apps, and cloud-based solutions that can address real-world challenges and provide value to users.
+                       Remember that creativity is not limited to design but also extends to problem-solving, efficiency, and finding novel solutions to complex problems in the domains of technology.
+                       <br>Whether it's designing a responsive website, building a cloud-based application, optimizing code performance, or crafting feature-rich mobile apps, my diverse skill set allows me
+                       to approach each project with a fresh perspective and a flair for innovation. Keep exploring, learning, and applying my skills to various projects to nurture and 
+                       grow mine creative capabilities further.</p>
                 <a href="#">Read more</a>
                 <div class= "skill_text"
                 <p>👉 See My Both Google Cloud Skill Profile</p>
@@ -263,7 +267,7 @@
                             into clean, human-friendly notes. It analyzes the entire document and produces well-structured, easy-to-read summaries.
                         </p>
                         <!-- TODO: replace # with your real Notes_summarizer link -->
-                        <a href="#" target="_blank" class="project-link">View project</a>
+                        <a href="https://github.com/binodkapadi/Notes_Summarizer" target="_blank" class="project-link">View project</a>
                     </div>
                 </div>
 
@@ -536,3 +540,4 @@
      <script src="script.js"></script> 
 </body>
 </html>
+
