--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                     <p>I have the potential to create innovative web applications, mobile apps, and cloud-based solutions that can address real-world challenges and provide value to users.
-                       Remember that creativity is not limited to design but also extends to problem-solving, efficiency, and finding novel solutions to complex problems in the domains of technology.
+                       Remember that creativity is not limited to design but also extends to problem-solving, efficiency, and finding novel solutions to complex problems in the domains of technology.<br>
                        <br>Whether it's designing a responsive website, building a cloud-based application, optimizing code performance, or crafting feature-rich mobile apps, my diverse skill set allows me
                        to approach each project with a fresh perspective and a flair for innovation. Keep exploring, learning, and applying my skills to various projects to nurture and 
                        grow mine creative capabilities further.</p>
@@ -540,4 +540,5 @@
      <script src="script.js"></script> 
 </body>
 </html>
+
 
